bootcounter.deployment.yml
apiVersion: extensions/v1beta1 
kind: Deployment
metadata:
  name: bootcounter 
  namespace: {kube.namespace}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bootcounter
    spec:
      volumes:
        - name: bootcounter-storage
          persistentVolumeClaim:
           claimName: bootcounter-claim
      containers:
      - name: amq
        image: "sounak01/bootcounter:01"
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /var/data/
            name: bootcounter-storage
        resources:
          requests:
            cpu: "1"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "512Mi"
