bootcounter.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bootcounter
  name: bootcounter
  namespace: {kube.namespace}
spec:
  ports:
  - name: "7070"
    port: 7070
    targetPort: 8080
  selector:
    app: bootcounter
