bootcounter.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bootcounter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: {kube.namespace}
spec:
  rules:
  - host: boot.{k8address}.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: bootcounter
          servicePort: 7070
